<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
<string name="app_name">Eisenheinrich</string>
<string name="site_name">Krautchan</string>
<string name="sample_simple_list_selected">Selected: </string>
<string name="bookmark">Bookmark</string>
<string name="reload">Reload</string>
<string name="forward">Vorwärts</string>
<string name="prefs">Einstellungen</string>
<string name="home">Home</string>
<string name="disclaimer_filename">disclaimer_fragment.html</string>
<string name="reply">Reply</string>
<string name="ok">OK :3</string>
<string name="go_thread">Zu Faden</string>
<string name="new_posting">Neues Posting</string>
<string name="test">Test</string>
<string name="load_thread">Faden laden</string>
<string name="new_thread">Neuer Faden</string>
<string name="thread_history">Besuchte Fäden</string>
<string name="edit">Edit</string>
<string name="about">Über Eisenheinrich</string>
<string name="cancel">Cancel ;_;</string>
<string name="all">Alle an/aus</string>
<string name="banned_message">Posten nicht möglich, du bist gebannt</string>
<string name="update_available_title">Update verfügbar</string>
<string name="update_available_text">Ein Update von Eisenheinrich ist unter http://eisenheinrich.datensalat.net verfügbar\n\n Diese Seite jetzt öffnen?</string>
<string name="show_collapsed">Gelesene einblenden</string>
<string name="content">Inhalt</string>
<string name="name">Name</string>
<string name="title">Titel</string>
<string name="sage">Säge</string>
<string name="images">Bilder</string>
<string name="go_to_krautchan">Zum Krautkanal</string>
<string name="from_camera">Kamera</string>
<string name="harro_bernd">Hallo Bernd :3</string>
<string name="image_search">Bildersuche</string>
<string name="thread_number">Faden-Nummer</string>
<string name="error_no_threadnum">Fehler! Keine Faden-Nummer!</string>
<string name="error_invalid_thread">Fehler! Faden existiert nicht!</string>
<string name="option_bookmark">Bookmark</string>
<string name="option_hide">[-]</string>
<string name="ip_number">IP Nummer</string>
<string name="banned">banniert!</string>
<string name="komtur_code">Komturcode</string>
<string name="to_ban_page">Zur Bann-Seite</string>
<string name="debug">Debug-Version</string>
<string name="could_not_open_image_viewer">Konnte keinen Bildbetrachter starten</string>
<string name="could_not_open_youtube_viewer">Konnte Youtube nicht öffnen</string>
<string name="could_not_open_browser">Konnte Browser nicht öffnen</string>
<string name="bord_unreachable">Der Krautkanal ist nicht erreichbar oder dein Netz ist unten</string>
<string name="error_network">Netzwerk-Probleme</string>
<string name="boardlist_headline">Bretter</string>
<string name="icon_cog"></string>
<string name="icon_options">J</string>
</resources>